CSS/screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers (opinionated).
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: sans-serif; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input { /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select { /* 1 */
  text-transform: none;
}

/**
 * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
 *    controls in Android 4.
 * 2. Correct the inability to style clickable types in iOS and Safari.
 */

button,
html [type="button"], /* 1 */
[type="reset"],
[type="submit"] {
  -webkit-appearance: button; /* 2 */
  font-size: 1.5em;
}

/**
 * Remove the inner border and padding in Firefox.
 */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Change the border, margin, and padding in all browsers (opinionated).
 */

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * 1. Add the correct display in IE 9-.
 * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  display: inline-block; /* 1 */
  vertical-align: baseline; /* 2 */
}

/**
 * Remove the default vertical scrollbar in IE.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10-.
 * 2. Remove the padding in IE 10-.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
  transform: scale(1.5);
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* End Form portion of Normalize CSS */

/* Responsive Media */
img, audio, video {
  display: block;
  max-width: 100%;
}

/* ===== BASE STYLES ===== */

/*
  Major Sixth Modular Scale:
  http://www.modularscale.com/?22&px&1.667&web&text
*/

/* ===== LAYOUT STYLES ====== */

h1 {
	font-size: 4em;
	line-height: 1em;
}

p {
	font-size: 1.75em;
	text-align: center;
}

html {
 /* 66px Modified from 1.182em to 2.000em /~300%/ INITIAL: 26px / ~ 120% */
 /* 66px ~300% / 26px / ~ 120% */
  font-family: "Helvetica", "Arial", "Courier", "Courier New", "Verdana", 
  "Tahoma", "Sans-Serif", "Avant Garde", "Georgia", "Times New Roman";
}

label {
  font-size: 1.5em;
  display: block;
}

#input-email {
	line-height: 2.0em;
}

input {
	font-size: 2.5em;
}

#age-verification-checkbox {
	height: 0.425em;
	width: 0.5em;
}

#age-verification-label {
	display: inline;
	padding: 0.25em;

}

#input-submit {
	line-height: 2em;
}

/* ===== MODULAR STYLES ===== */

/* ===== STATE STYLES ======= */

/*Responsive Design
	Mobile-First*/
@media screen and (min-width: 320px) {

body {
	color: black;
	background: url("../media/wood.jpg") fixed; 
	background-repeat: no-repeat;	
	background-size: cover;
	background-position: center;
	text-align: center;
}
	
h1 {
	font-size: 3em;
	line-height: 1.25em;
	padding-bottom: 0.75em;
}

p {
	font-size: 1.5em;
	line-height: 1.5em;
	padding-bottom: 1.5em;
}

html {
  padding: 2.5em; 
}

label {
  font-size: 1.25em;
	display: block;
}

#input-email {
	line-height: 2.0em;
	padding-bottom: 2.0em;
	font-family: inherit;
}

input {
	font-size: 2.0em;
	width: 100%;
	margin: auto;
}

#age-verification-checkbox {
	height: 0.5em;
	width: 0.5em;
  margin-left: 0.5%;
}

#age-verification-label {
	display: inline;
	padding: 0.25em;
	line-height: 2.5em;
}

#input-submit {
	line-height: 2em;
	padding-top: 2em;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
  transform: scale(1.5);
}

}

/*Responsive Design
	Tablets*/
@media screen and (min-width: 640px) {

html {
	text-align: center;
}
	
body {
	color: black;
	background: url("../media/wood.jpg") fixed; 
	background-repeat: no-repeat;	
	background-size: cover;
	background-position: center;
	text-align: center;
}
	
h1 {
	font-size: 4em;
	line-height: 1.25em;
	padding-bottom: 0.75em;
}

p {
	font-size: 2em;
	line-height: 1.5em;
	padding-bottom: 1.5em;
	margin: auto;
	width: 83%;
	text-align: center;
}

html {
  padding: 2.5em; 
 
}

label {
  font-size: 1.5em;
	 display: block;
}

#input-email {
	line-height: 2.0em;
	padding-bottom: 2.0em;
}

input {
	color: black;
	font-size: 2em;
	width: 60%;
	margin: auto;
	position: center;
}

#age-verification-checkbox {
	height: 0.525em;
	width: 0.625em;
}

#age-verification-label {
	display: inline;
	padding: 0.25em;
	line-height: 2.5em;
}

#input-submit {
	line-height: 2em;
	padding-top: 2em;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
  transform: scale(2);
}

}

/*Responsive Design
	Desktops*/	
@media screen and (min-width: 960px) {

body {
	text-align: center;
	background: url("../media/wood.jpg") fixed; 
	background-repeat: no-repeat;	
	background-size: cover;
	background-position: center;
}
	
h1 {
	font-size: 5em;
	line-height: 1.25em;
	padding-bottom: 0.75em;
	text-align: center;
}

p {
	font-size: 2.5em;
	line-height: 1.5em;
	padding-bottom: 1em;
	padding-right: 60%;
	width: 75%;
	text-align:center;
}

html {
  padding: 2.5em;  
}

label {
  font-size: 1.5em;
	display: inline;
	margin-right: 0.5em;
}

#input-email {
	line-height: 2.0em;
	padding-bottom: 2.0em;
}

input {
	font-size: 2.0em;
	width: 35%;
	margin: auto;
}

#age-verification-checkbox {
	height: 0.5em;
	width: 0.55em;
	margin-left: 1%;
}

#age-verification-label {
	display: inline;
	padding: 0.25em;
	line-height: 2.5em;
	margin-left: 0.5%;
}

#input-submit {
	line-height: 2em;
	padding-top: 2em;
}
#sign-up{
	text-align: center; 
	padding-right: 20px; 
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
  transform: scale(2);
}

[type="submit"] {
	width: 25%;
}

}

